# Medicall_Api

./: .env.example  .gitignore  Procfile  README.md  config.py  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py
app/configurations/: database.py  views.py  views_config.py
app/models/: address_model.py  base_model.py  doctor_model.py  enum_model.py  episode_model.py  episodes.py  patient_model.py  superuser_model.py
app/schema/: __init__.py  adress_schema.py  doctor_schema.py  episodes_schema.py  patient_schema.py  superuser_schema.py
app/templates/: pdf_template.html  style.css
app/views/: __init__.py  access_view.py  base_view.py  bp_download_pdf.py  doctor_view.py  episodes_view.py  home.py  patient_view.py  print_episode_view.py  super_user_view.py
migrations/versions/: 054cee3f4d64_address_enum_episodes_model_changed.py  282357c9d63c_episodes_table_created.py  3977aa95b1c9_updated_db_for_new_models_superuser_and_.py  41b8a7172e0a_added_relationships.py  5aed173c060d_.py  89eba48f31b0_column_disabled.py  cb8ab65ca257_table_doctor_and_patient_created.py  fca8f62100ce_upgrade_model_patient.py
tests/: test_example.py  test_medicall.py  test_models.py
