[tool.poetry]
name = "medicall"
version = "0.1.0"
description = ""
authors = ["abdielmartins <abdielmartins21@gmail.com>, alexandrealfa <henriqueafcarvalho15@gmail.com>, EduardoMMS <emartins.marinho@gmail.com>, KevinWis, <kevinwischneski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
environs = "^9.3.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^2.7.0"
Flask-JWT-Extended = "^4.1.0"
psycopg2-binary = "^2.8.6"
Flask-RESTful = "^0.3.8"
marshmallow = "^3.11.1"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.2"
Faker = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
